[package]
name = "vigenere_cipher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error Handling
anyhow = "1.0"

[dev-dependencies]
# Bench
criterion = "0.3"
iai = "0.1" # criterion alternative

[[bench]]
name = "bench"
harness = false
